--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "chai": "^4.2.0"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
     "mocha": "^7.1.1"
   },
   "scripts": {
