--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
-    "mocha": "^7.1.1"
+    "fast-check": "^1.23.0",
+    "mocha": "^7.1.1",
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "test": "mocha"
