--- a/package.json
+++ b/package.json
@@ -2,18 +2,26 @@
   "name": "module5",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.20.1",
     "mocha": "^7.1.1"
+    "eslint-plugin-prettier": "^3.1.2",
+    "fast-check": "^1.23.0",
+    "prettier": "^1.19.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix"
   },
   "author": "",
   "license": "ISC"
