--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.20.1",
-    "mocha": "^7.1.1"
+    "mocha": "^7.1.1",
     "eslint-plugin-prettier": "^3.1.2",
     "fast-check": "^1.23.0",
     "prettier": "^1.19.1"
