--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "module5",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/module5/index.js",
   "dependencies": {
     "chai": "^4.2.0",
     "eslint-plugin-jsx-a11y": "^6.2.3"
@@ -13,9 +13,10 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.20.1",
-    "mocha": "^7.1.1",
     "eslint-plugin-prettier": "^3.1.2",
     "fast-check": "^1.23.0",
+    "mocha": "^7.1.1",
+    "nodemon": "^2.0.2",
     "prettier": "^1.19.1"
   },
   "scripts": {
