--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eslint-plugin-prettier": "^3.1.2",
     "fast-check": "^1.23.0",
     "mocha": "^7.1.1",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "sinon": "^9.0.1"
   },
   "author": "",
   "license": "ISC"
